# dstkc

./: README.md  pyproject.toml  setup.cfg
src/dstkc/: tkc.py
