[metadata]
name = dstkc
version = 0.0.1
author = BG
description = data science preprocessing toolkit and container
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GreeneWoods/dstkc
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src